<resources>
  <string name="app_name">Inventaria</string>
  <string name="item_list_fragment_label">@string/app_name</string>
  <string name="item_list_fragment_label_on_selection_mode">Seleccionar objetos</string>
  <string name="create_item_fragment_label">Nuevo objeto</string>
  <string name="edit_item_fragment_label">Editando %1$s</string>
  <string name="save">Guardar</string>
  <string name="edit">Editar</string>
  <string name="name">Nombre</string>
  <string name="description">Descripción</string>
  <string name="error__item_name_missing">Hace falta un nombre</string>
  <string name="select_picture">Seleccionar imagen</string>
  <string name="take_picture">Hacer una foto</string>
  <string name="sort_alphabetically">A-Z</string>
  <string name="sort_by_quantity">Ordenar por cantidad</string>
  <string name="sort_by_creation_date">Ordenar fecha de creación</string>
  <string name="layout_list">Lista</string>
  <string name="layout_grid_2">2 columnas</string>
  <string name="layout_grid_4">4 columnas</string>
  <string name="content_description__add_item">Añadir artículo</string>
  <string name="clear_selection">Deseleccionar todo</string>
  <string name="select_everything">Seleccionar todo</string>
  <string name="delete_items">Borrar objetos</string>
  <string name="delete_item">Borrar objeto</string>
  <string name="menu_option__sort">Ordenar</string>
  <string name="menu_option__layout">Visualizar</string>
  <string name="menu_option__select_items">Seleccionar</string>
  <string name="menu_option__deselect_items">Deseleccionar</string>
  <string name="menu_option__delete">Eliminar</string>
  <string name="menu_option__edit">Editar</string>
  <string name="close_selection_mode">Dejar de seleccionar</string>
  <string name="no">No</string>
  <string name="yes">Sí</string>
  <string name="product_photo">Foto del producto</string>
  <string name="exit_without_saving_confirmation_title">¿Salir sin guardar?</string>
  <string name="exit_without_saving_confirmation_message">¿Seguro que quieres salir sin terminar?</string>

  <plurals name="delete_item_cofirmation_message">
    <item quantity="one">¿Seguro que quieres eliminar este objeto?</item>
    <item quantity="other">¿Seguro que quieres eliminar estos objetos?</item>
  </plurals>
</resources>