<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context="meleros.paw.inventory.ui.MainActivity">

  <item
    android:orderInCategory="1"
    android:title="@string/menu_option__sort"
    app:showAsAction="never">

    <menu>

      <item
        android:id="@+id/action_sort_alphabetically"
        android:orderInCategory="1"
        android:title="@string/sort_alphabetically"
        app:showAsAction="never" />

      <item
        android:id="@+id/action_sort_by_quantity"
        android:orderInCategory="2"
        android:title="@string/sort_by_quantity"
        app:showAsAction="never" />

      <item
        android:id="@+id/action_sort_by_creation_date"
        android:orderInCategory="3"
        android:title="@string/sort_by_creation_date"
        app:showAsAction="never" />

    </menu>

  </item>

  <item
    android:orderInCategory="2"
    android:title="@string/menu_option__layout"
    app:showAsAction="never">

    <menu>

      <item
        android:id="@+id/action_lay_out_as_list"
        android:orderInCategory="1"
        android:title="@string/layout_list"
        app:showAsAction="never" />

      <item
        android:id="@+id/action_lay_out_as_grid_2"
        android:orderInCategory="2"
        android:title="@string/layout_grid_2"
        app:showAsAction="never" />

      <item
        android:id="@+id/action_lay_out_as_grid_4"
        android:orderInCategory="3"
        android:title="@string/layout_grid_4"
        app:showAsAction="never" />

    </menu>

  </item>

  <item
    android:id="@+id/action_enable_selection_mode"
    android:icon="@drawable/ic_enable_selection_mode"
    android:orderInCategory="3"
    android:title="@string/menu_option__select_items"
    app:showAsAction="ifRoom" />

  <item
    android:id="@+id/action_disable_selection_mode"
    android:icon="@drawable/ic_disable_selection_mode"
    android:orderInCategory="1"
    android:title="@string/close_selection_mode"
    android:visible="false"
    app:showAsAction="always" />

</menu>