<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android"
  tools:showIn="@layout/fragment_item_list">

  <View
    android:id="@+id/view__close_selection_menu"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:background="@color/translucent_white"
    android:clickable="true"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:visibility="visible" />

  <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
    android:id="@+id/btn__delete_items"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/fab_margin"
    android:layout_marginEnd="@dimen/fab_margin"
    android:text="@string/delete_items"
    android:visibility="gone"
    app:icon="@drawable/ic_delete_items"
    app:layout_constraintBottom_toTopOf="@id/btn__deselect_all"
    app:layout_constraintEnd_toEndOf="parent"/>

  <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
    android:id="@+id/btn__deselect_all"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/fab_margin"
    android:layout_marginEnd="@dimen/fab_margin"
    android:text="@string/clear_selection"
    android:visibility="gone"
    app:icon="@drawable/ic_deselect_all"
    app:layout_constraintBottom_toTopOf="@id/btn__select_all"
    app:layout_constraintEnd_toEndOf="parent" />

  <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
    android:id="@+id/btn__select_all"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/fab_margin"
    android:layout_marginEnd="@dimen/fab_margin"
    android:text="@string/select_everything"
    android:visibility="gone"
    app:icon="@drawable/ic_add"
    app:layout_constraintBottom_toTopOf="@id/btn__create_item"
    app:layout_constraintEnd_toEndOf="parent" />

</merge>