<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.EditItemFragment">

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline__margin_top"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:orientation="horizontal"
    app:layout_constraintGuide_begin="16dp"/>

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline__margin_start"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="16dp"/>

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline__margin_end"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:orientation="vertical"
    app:layout_constraintGuide_end="16dp"/>

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline__center_horizontal"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.5"/>

  <meleros.paw.inventory.ui.widget.FramedPhotoViewerView
    android:id="@+id/image_viewer__photo"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="@id/guideline__center_horizontal"
    app:layout_constraintEnd_toEndOf="@id/guideline__margin_end"
    app:layout_constraintStart_toStartOf="@id/guideline__margin_start"
    app:layout_constraintTop_toTopOf="@id/guideline__margin_top" />

  <meleros.paw.inventory.ui.widget.QuantityView
    android:id="@+id/picker__quanitity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constrainedHeight="true"
    app:layout_constrainedWidth="true"
    android:layout_marginTop="8dp"
    app:layout_constraintEnd_toStartOf="@id/guideline__margin_end"
    app:layout_constraintStart_toEndOf="@id/guideline__margin_start"
    app:layout_constraintTop_toBottomOf="@id/guideline__center_horizontal" />

  <EditText
    android:id="@+id/edit__item_name"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:hint="@string/name"
    android:importantForAutofill="no"
    android:inputType="text"
    android:lines="1"
    app:layout_constraintEnd_toStartOf="@id/guideline__margin_end"
    app:layout_constraintStart_toEndOf="@id/guideline__margin_start"
    app:layout_constraintTop_toBottomOf="@id/picker__quanitity" />

  <EditText
    android:id="@+id/edit__description"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginBottom="8dp"
    android:gravity="top"
    android:hint="@string/description"
    android:importantForAutofill="no"
    android:inputType="textMultiLine"
    app:layout_constraintBottom_toTopOf="@id/btn__create_item"
    app:layout_constraintEnd_toEndOf="@id/guideline__margin_end"
    app:layout_constraintStart_toStartOf="@id/guideline__margin_start"
    app:layout_constraintTop_toBottomOf="@id/edit__item_name" />

  <Button
    android:id="@+id/btn__create_item"
    style="@style/Button"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/save"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>